added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,8 +26,15 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
-        </ul>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+         <li>A padding indicates how much space we want around the content inside an element.</li>
+        <li>how elements should be rendered on screen</li>
+        <li>
+          <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/CSS_basics">the basics of ccs for beginers </a>
+        </li>
+        <li>used to style and layout web pages</li>
+        
+      </ul>
       </section>
    
       <section class="card" id="git-section">
