--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
         <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        <li>JavaScript is a scripting or programming language that allows you to implement complex features on web pages</li>
+        <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/What_is_JavaScript">What_is_JavaScript</a>
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
